# goossens-book-ip-projects

./: README.md
2022.1/: README.md
2022.1/chapter_2/: install_git.txt  my_adder_ip.cpp  (+2 more)
2024.1/: README.md
2024.1/fde_ip/project_1.gen/sources_1/bd/design_1/ip/design_1_fde_ip_0_0/drivers/fde_ip_v1_0/src/: CMakeLists.txt  Makefile  xfde_ip.c  xfde_ip.h  xfde_ip_hw.h  xfde_ip_linux.c  xfde_ip_sinit.c
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/: CMakeLists.txt  Findcommonmeta.cmake  bsp.yaml
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/hw_artifacts/: ps7_cortexa9_0_baremetal.dts  sdt.dts
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/include/: distro.conf  ip_drv_map.yaml  xparameters.h  xtimer_config.h
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/: compile_commands.json
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_lib_configs.txt  compile_commands.json  install_manifest.txt
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/common/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/coresightps_dcc/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/devcfg/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/dmaps/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/emacps/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/gpiops/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/multihart_ip/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/qspips/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/scugic/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/scutimer/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/build_configs/gen_bsp/libsrc/scuwdt/src/: Makefile  cmake_install.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/emacps/src/: EMACPSConfig.cmake
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/standalone/src/common/: xmem_config.h
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/uartps/src/: xuartps_g.c
2024.1/multihart_2h_ip/workspace/platform/ps7_cortexa9_0/standalone_ps7_cortexa9_0/bsp/libsrc/xiltimer/src/: XiltimerExample.cmake
2024.1/rv32i_npp_ip/project_1.gen/sources_1/bd/design_1/ip/design_1_rv32i_npp_ip_0_0/drivers/rv32i_npp_ip_v1_0/src/: CMakeLists.txt  xrv32i_npp_ip.c  xrv32i_npp_ip.h  xrv32i_npp_ip_hw.h  xrv32i_npp_ip_sinit.c
2025.1/: README.md
fir/: readme.md
(+16981 files in other folders)
